--- a/home.html
+++ b/home.html
@@ -87,6 +87,8 @@
         </div>
         <img class="slide-image" src="img/slide_img.png">
     </div>
+    <div class="slide-navigation">
+    </div>
 </main>
 <script src="js/slide.js"></script>
 </body>
