added footer in home page

--- a/pages/home.html
+++ b/pages/home.html
@@ -110,7 +110,7 @@
             </div>
         </div>
         <div class="event-container2">
-            <div class="event">
+            <a class="event">
                 <div class="event-image-container">
                     <img src="../img/home/events/img_3.png" alt="" class="event-img">
                 </div>
@@ -118,8 +118,8 @@
                     <p class="event-title">Новинки месяца</p>
                     <p class="event-data">Узнайте первым о новых устройствах</p>
                 </div>
-            </div>
-            <div class="event">
+            </a>
+            <a class="event">
                 <div class="event-image-container">
                     <img src="../img/home/events/img_4.png" alt="" class="event-img">
                 </div>
@@ -127,8 +127,8 @@
                     <p class="event-title">MOBI M5s</p>
                     <p class="event-data">Магия развлечений</p>
                 </div>
-            </div>
-            <div class="event">
+            </a>
+            <a class="event">
                 <div class="event-image-container">
                     <img src="../img/home/events/img_5.png" alt="" class="event-img">
                 </div>
@@ -136,7 +136,7 @@
                     <p class="event-title">Как выбрать фен</p>
                     <p class="event-data">На что обратить внимание?</p>
                 </div>
-            </div>
+            </a>
         </div>
     </div>
     <div class="popular-products">
@@ -146,69 +146,113 @@
             <button class="popular-product-button popular-products-next" onclick="next_product_list()">></button>
         </div>
         <div class="popular-products-container-list">
-            <div class="product">
+            <a class="product">
                 <img class="product-img" src="../img/home/popular-products/product.png" alt="">
                 <p class="product-info">Фен для волос с ионизацией для укладки</p>
                 <p class="product-price">10 000 Р</p>
-            </div>
-            <div class="product">
+            </a>
+            <a class="product">
                 <img class="product-img" src="../img/home/popular-products/product.png" alt="">
                 <p class="product-info">Фен для волос с ионизацией для укладки</p>
                 <p class="product-price">10 000 Р</p>
-            </div>
-            <div class="product">
+            </a>
+            <a class="product">
                 <img class="product-img" src="../img/home/popular-products/product.png" alt="">
                 <p class="product-info">Фен для волос с ионизацией для укладки</p>
                 <p class="product-price">10 000 Р</p>
-            </div>
-            <div class="product">
+            </a>
+            <a class="product">
                 <img class="product-img" src="../img/home/popular-products/product.png" alt="">
                 <p class="product-info">Фен для волос с ионизацией для укладки</p>
                 <p class="product-price">10 000 Р</p>
-            </div>
-            <div class="product">
+            </a>
+            <a class="product">
                 <img class="product-img" src="../img/home/popular-products/product.png" alt="">
                 <p class="product-info">Фен для волос с ионизацией для укладки</p>
                 <p class="product-price">10 000 Р</p>
-            </div>
-            <div class="product">
+            </a>
+            <a class="product">
                 <img class="product-img" src="../img/home/popular-products/product.png" alt="">
                 <p class="product-info">Фен для волос с ионизацией для укладки</p>
                 <p class="product-price">10 000 Р</p>
-            </div>
-            <div class="product">
+            </a>
+            <a class="product">
                 <img class="product-img" src="../img/home/popular-products/product.png" alt="">
                 <p class="product-info">Фен для волос с ионизацией для укладки</p>
                 <p class="product-price">10 000 Р</p>
-            </div>
-            <div class="product">
+            </a>
+            <a class="product">
                 <img class="product-img" src="../img/home/popular-products/product.png" alt="">
                 <p class="product-info">Фен для волос с ионизацией для укладки</p>
                 <p class="product-price">10 000 Р</p>
-            </div>
-            <div class="product">
+            </a>
+            <a class="product">
                 <img class="product-img" src="../img/home/popular-products/product2.png" alt="">
                 <p class="product-info">Фен для волос с ионизацией для укладки</p>
                 <p class="product-price">10 000 Р</p>
-            </div>
-            <div class="product">
+            </a>
+            <a class="product">
                 <img class="product-img" src="../img/home/popular-products/product2.png" alt="">
                 <p class="product-info">Фен для волос с ионизацией для укладки</p>
                 <p class="product-price">10 000 Р</p>
-            </div>
-            <div class="product">
+            </a>
+            <a class="product">
                 <img class="product-img" src="../img/home/popular-products/product2.png" alt="">
                 <p class="product-info">Фен для волос с ионизацией для укладки</p>
                 <p class="product-price">10 000 Р</p>
-            </div>
-            <div class="product">
+            </a>
+            <a class="product">
                 <img class="product-img" src="../img/home/popular-products/product2.png" alt="">
                 <p class="product-info">Фен для волос с ионизацией для укладки</p>
                 <p class="product-price">10 000 Р</p>
-            </div>
+            </a>
         </div>
     </div>
 </main>
+<footer>
+    <div class="footer-container">
+        <div class="footer-container-links">
+            <h3 class="footer-links-title">о нас</h3>
+            <p class="footer-link"><a>FELFRI</a></p>
+            <p class="footer-link"><a>Контакты</a></p>
+        </div>
+        <div class="footer-container-links">
+            <h3 class="footer-links-title">ресурсы</h3>
+            <p class="footer-link"><a>Новости</a></p>
+            <p class="footer-link"><a>Статьи</a></p>
+            <p class="footer-link"><a>Обзоры</a></p>
+        </div>
+        <div class="footer-container-links">
+            <h3 class="footer-links-title">покупателям</h3>
+            <p class="footer-link"><a>Условия продажи</a></p>
+            <p class="footer-link"><a>Доставка</a></p>
+            <p class="footer-link"><a>Оплата</a></p>
+            <p class="footer-link"><a>Гарантия</a></p>
+            <p class="footer-link"><a>Инструкции</a></p>
+            <p class="footer-link"><a>Сервисные центры</a></p>
+        </div>
+        <div class="footer-container-links">
+            <h3 class="footer-links-title">каталог товаров</h3>
+            <p class="footer-link"><a>Красота и здоровье</a></p>
+            <p class="footer-link"><a>Автотовары</a></p>
+            <p class="footer-link"><a>Аксессуары</a></p>
+            <p class="footer-link"><a>Идеи для подарка</a></p>
+        </div>
+        <div class="footer-container-links">
+            <h3 class="footer-links-title footer-link">контакты</h3>
+            <p class="footer-phone-number footer-link">8 (800) 800-80-80</p>
+            <p class="footer-email footer-link">into@felfri.ru</p>
+            <p class="footer-work-time footer-link">Пн–Пт: 9:00-20:00 МСК</p>
+            <button class="footer-dispatcher footer-link"><a>онлайн-поддержка</a></button>
+            <div class="footer-contacts-container">
+                <a class="footer-contact"><button class="footer-contact-button"><img class="footer-contact-img" src="../img/home/link-icons/vk.png" alt=""></button></a>
+                <a class="footer-contact"><button class="footer-contact-button"><img class="footer-contact-img" src="../img/home/link-icons/telegram.png" alt=""></button></a>
+                <a class="footer-contact"><button class="footer-contact-button"><img class="footer-contact-img" src="../img/home/link-icons/ok.png" alt=""></button></a>
+            </div>
+        </div>
+        <div class="footer-contacts_links"></div>
+    </div>
+</footer>
 <script src="../js/slide.js"></script>
 <script src="../js/popular_products_list.js"></script>
 </body>
