added privacy-policy page

--- a/ferfri.html
+++ b/ferfri.html
@@ -5,7 +5,8 @@
     <title>FERFRI</title>
 </head>
 <body>
-<a href="pages/home.html">home</a>
-<a href="pages/personal-account.html">personal account</a>
+<p><a href="pages/home.html">home</a></p>
+<p><a href="pages/personal-account.html">personal account</a></p>
+<p><a href="pages/privacy-policy.html">privacy-policy</a></p>
 </body>
 </html>
