--- a/pages/home.html
+++ b/pages/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>FERFRI</title>
     <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 <header>
