added registration page

--- a/ferfri.html
+++ b/ferfri.html
@@ -5,8 +5,10 @@
     <title>FERFRI</title>
 </head>
 <body>
-<p><a href="pages/home.html">home</a></p>
-<p><a href="pages/personal-account.html">personal account</a></p>
-<p><a href="pages/privacy-policy.html">privacy-policy</a></p>
+<a href="pages/home.html">home</a><br>
+<a href="pages/personal-account.html">personal account</a><br>
+<a href="pages/privacy-policy.html">privacy-policy</a><br>
+<a href="pages/authorization.html">authorization</a><br>
+<a href="pages/registration.html">registration</a><br>
 </body>
 </html>
