--- a/pages/registration.html
+++ b/pages/registration.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>FERFRI</title>
-  <link rel="stylesheet" href="../css/authorization.css">
+  <link rel="stylesheet" href="../css/registration.css">
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -25,17 +25,17 @@
 </header>
 <main>
   <div class="main-container">
-    <div class="authorization-container">
+    <div class="registration-container">
       <form action="">
-        <label class="form-title">Авторизация</label><br>
+        <label class="form-title">Регистрация</label><br>
         <label class="form-input">
-          <input type="text" placeholder="E-mail" class="authorization-input"><br>
-          <input type="text" placeholder="Пароль" class="authorization-input"><br>
-          <input type="submit" value="Войти" class="authorization-button">
+          <input type="text" placeholder="E-mail" class="registration-input"><br>
+          <input type="text" placeholder="Пароль" class="registration-input"><br>
+          <input type="text" placeholder="Подтвердите пароль" class="registration-input"><br>
+          <input type="submit" value="зарегистрироваться" class="registration-button">
         </label>
       </form><br>
-      <a class="additional-link" href="#"><span>зарегистрироваться</span></a>
-      <a class="additional-link" href="#"><span>Забыли пароль?</span></a>
+      <p><a href="privacy-policy.html">Авторизуясь, вы соглашаетесь с правилами пользования сайтом и даёте согласие на обработку персональных данных.</a></p>
     </div>
   </div>
 </main>
