--- a/ferfri.html
+++ b/ferfri.html
@@ -10,5 +10,6 @@
 <a href="pages/privacy-policy.html">privacy-policy</a><br>
 <a href="pages/authorization.html">authorization</a><br>
 <a href="pages/registration.html">registration</a><br>
+<a href="pages/404.html">404 page</a><br>
 </body>
 </html>
