upgrade personal account page

--- a/pages/personal-account.html
+++ b/pages/personal-account.html
@@ -5,9 +5,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../css/personal-account.css">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Личный кабинет</title>
+    <link rel="stylesheet" href="../css/personal-account.css">
+    <title>FERFRI</title>
 </head>
 <body>
 <header>
@@ -27,81 +27,110 @@
     </div>
 </header>
 <main>
-    <div class="site-name">
-        <h1>Личный кабинет</h1>
-    </div>
-    <div class="header-containers">
-        <div class="container">
-            <div class="header-container-info">
-                <h2>Мои данные</h2>
+    <div class="main-container">
+        <h1 class="main-title">Личный кабинет</h1>
+        <div class="up-blocks-container">
+            <div class="up-block-container">
+                <div class="up-block-container2">
+                    <h2 class="up-block-title">Мои данные</h2>
+                    <div class="up-block-data-container">
+                        <img class="up-block-data-img" src="../img/personal-account/profile-img.png" alt="">
+                        <div class="up-block-user-data-container">
+                            <p class="up-block-user-name">Константин Константинов</p>
+                            <p class="up-block-user-date">Дата рождения: 20.01.1986</p>
+                        </div>
+                    </div>
+                    <a class="edit-data">Изменить данные</a>
+                </div>
             </div>
-            <div class="middle-container-info">
-                <img src="../img/personal-account/person.svg" alt="person">
-                <div class="container-info">
-                    <p>Константин Константинов</p>
-                    <p>Дата рождения: 20.01.1986</p>
-                    <a class="container-info-link" href="#!">Изменить данные</a>
+            <div class="up-block-container">
+                <div class="up-block-container2">
+                    <h2 class="up-block-title">Приоритетный маркетплейс</h2>
+                    <div class="up-block-data-container">
+                        <img class="up-block-data-icon-img" src="../img/personal-account/wb.png" alt="">
+                        <span class="up-block-data-name">Wildberries</span>
+                    </div>
+                    <a class="edit-data">Изменить данные</a>
+                </div>
+            </div>
+            <div class="up-block-container">
+                <div class="up-block-container2">
+                    <h2 class="up-block-title">Получить купон  на скидку</h2>
+                    <div class="up-block-data-container">
+                        <img class="up-block-data-icon-img" src="../img/personal-account/ozon.png" alt="">
+                        <span class="up-block-data-name">Wildberries</span>
+                    </div>
+                    <a class="edit-data">Изменить данные</a>
                 </div>
             </div>
         </div>
-        <div class="container">
-            <div class="header-container-info">
-                <h2>Приоритетный маркетплейс</h2>
-            </div>
-            <div class="middle-container-info">
-                <img src="../img/personal-account/person.svg" alt="person">
-                <div class="container-info">
-                    <p>Wildberries</p>
-                    <a class="container-info-link" href="#!">Изменить</a>
+        <div class="down-blocks-container">
+            <div class="down-block-container">
+                <div class="down-block-container2">
+                    <h2 class="down-block-title">Служба поддержки</h2><br>
+                    <a><button class="down-block-button">написать</button></a>
                 </div>
             </div>
-        </div>
-        <div class="container">
-            <div class="header-container-info">
-                <h2>Получить купон на скидку</h2>
-            </div>
-            <div class="middle-container-info">
-                <img src="../img/personal-account/person.svg" alt="person">
-                <div class="container-info">
-                    <p>Ozon</p>
-                    <a class="container-info-link" href="#!">Получить</a>
+            <div class="down-block-container">
+                <div class="down-block-container2">
+                    <h2 class="down-block-title">Сервисный центр</h2><br>
+                    <a><button class="down-block-button">обратиться</button></a>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="footer-containers">
-        <div class="container">
-            <div class="header-container-info">
-                <h2>Служба поддержки</h2>
-            </div>
-            <div class="middle-container-info">
-                <div class="container-info">
-                    <button class="button" type="button">Написать</button>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="header-container-info">
-                <h2>Сервисный центр</h2>
-            </div>
-            <div class="middle-container-info">
-                <div class="container-info">
-                    <button class="button" type="button">Обратиться</button>
-                </div>
-            </div>
-        </div>
-        <div class="container blue">
-            <div class="header-container-info">
-                <h2>Скидки и розыгрышы</h2>
-            </div>
-            <div class="middle-container-info">
-                <div class="container-info">
-                    <button class="button" type="button">Написать</button>
+            <div class="other-down-block-container">
+                <div class="down-block-container2">
+                    <h2 class="down-block-title">Больше скидок и розыгрешей</h2><br>
+                    <a><img class="other-down-block-button" src="../img/personal-account/vk.png" alt=""></a>
+                    <a><img class="other-down-block-button" src="../img/personal-account/instagram.png" alt></a>
+                    <a><img class="other-down-block-button" src="../img/personal-account/ok.png" alt></a>
                 </div>
             </div>
         </div>
     </div>
 </main>
-<script src="../js/slide.js"></script>
+<footer>
+    <div class="footer-container">
+        <div class="footer-container-links">
+            <h3 class="footer-links-title">о нас</h3>
+            <p class="footer-link"><a>FELFRI</a></p>
+            <p class="footer-link"><a>Контакты</a></p>
+        </div>
+        <div class="footer-container-links">
+            <h3 class="footer-links-title">ресурсы</h3>
+            <p class="footer-link"><a>Новости</a></p>
+            <p class="footer-link"><a>Статьи</a></p>
+            <p class="footer-link"><a>Обзоры</a></p>
+        </div>
+        <div class="footer-container-links">
+            <h3 class="footer-links-title">покупателям</h3>
+            <p class="footer-link"><a>Условия продажи</a></p>
+            <p class="footer-link"><a>Доставка</a></p>
+            <p class="footer-link"><a>Оплата</a></p>
+            <p class="footer-link"><a>Гарантия</a></p>
+            <p class="footer-link"><a>Инструкции</a></p>
+            <p class="footer-link"><a>Сервисные центры</a></p>
+        </div>
+        <div class="footer-container-links">
+            <h3 class="footer-links-title">каталог товаров</h3>
+            <p class="footer-link"><a>Красота и здоровье</a></p>
+            <p class="footer-link"><a>Автотовары</a></p>
+            <p class="footer-link"><a>Аксессуары</a></p>
+            <p class="footer-link"><a>Идеи для подарка</a></p>
+        </div>
+        <div class="footer-container-links">
+            <h3 class="footer-links-title footer-link">контакты</h3>
+            <p class="footer-phone-number footer-link">8 (800) 800-80-80</p>
+            <p class="footer-email footer-link">into@felfri.ru</p>
+            <p class="footer-work-time footer-link">Пн–Пт: 9:00-20:00 МСК</p>
+            <button class="footer-dispatcher footer-link"><a>онлайн-поддержка</a></button>
+            <div class="footer-contacts-container">
+                <a class="footer-contact"><button class="footer-contact-button"><img class="footer-contact-img" src="../img/home/link-icons/vk.png" alt=""></button></a>
+                <a class="footer-contact"><button class="footer-contact-button"><img class="footer-contact-img" src="../img/home/link-icons/telegram.png" alt=""></button></a>
+                <a class="footer-contact"><button class="footer-contact-button"><img class="footer-contact-img" src="../img/home/link-icons/ok.png" alt=""></button></a>
+            </div>
+        </div>
+        <div class="footer-contacts_links"></div>
+    </div>
+</footer>
 </body>
 </html>
