added contacts page

--- a/pages/404.html
+++ b/pages/404.html
@@ -19,7 +19,7 @@
     </ul>
     <div class="header_icons">
       <a class="header-icons-link" href="#"><img src="../img/home/icons/search.png" class="header-search" alt=""></a>
-      <a class="header-icons-link" href="#"><img src="../img/home/icons/profile.png" class="header-profile" alt=""></a>
+      <a class="header-icons-link" href="personal-account.html"><img src="../img/home/icons/profile.png" class="header-profile" alt=""></a>
     </div>
   </div>
 </header>
