--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>FERFRI</title>
-  <link rel="stylesheet" href="../css/registration.css">
   <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/contact.css">
 </head>
 <body>
 <header>
@@ -25,17 +25,19 @@
 </header>
 <main>
   <div class="main-container">
-    <div class="registration-container">
-      <form action="">
-        <label class="form-title">Регистрация</label><br>
-        <label class="form-input">
-          <input type="text" placeholder="E-mail" class="registration-input"><br>
-          <input type="text" placeholder="Пароль" class="registration-input"><br>
-          <input type="text" placeholder="Подтвердите пароль" class="registration-input"><br>
-          <input type="submit" value="зарегистрироваться" class="registration-button">
-        </label>
-      </form><br>
-      <p><a href="privacy-policy.html">Авторизуясь, вы соглашаетесь с правилами пользования сайтом и даёте согласие на обработку персональных данных.</a></p>
+    <h1 class="main-title">Контакты</h1>
+    <div class="main-contact-container">
+      <div class="contact-container">
+        <p class="contact">+7(999) 111-11-11</p>
+        <p class="contact">+7(999) 222-22-22</p>
+        <p class="contact">+7(999) 333-33-33</p>
+        <p class="address">Воробьёвсое шоссе д.6 оф.306</p>
+        <h3 class="contact-title">Мы на маркетплэйсах:</h3>
+        <a><button class="contact-button">ozon</button></a>
+        <a><button class="contact-button">ozon</button></a>
+        <a><button class="contact-button">ozon</button></a>
+      </div>
+      <div class="map"><img class="map-img" src="../img/contacts/map.png" alt=""></div>
     </div>
   </div>
 </main>
