--- a/pages/personal-account.html
+++ b/pages/personal-account.html
@@ -22,7 +22,7 @@
         </ul>
         <div class="header_icons">
             <a class="header-icons-link" href="#"><img src="../img/home/icons/search.png" class="header-search" alt=""></a>
-            <a class="header-icons-link" href="#"><img src="../img/home/icons/profile.png" class="header-profile" alt=""></a>
+            <a class="header-icons-link" href="personal-account.html"><img src="../img/home/icons/profile.png" class="header-profile" alt=""></a>
         </div>
     </div>
 </header>
@@ -40,7 +40,7 @@
                             <p class="up-block-user-date">Дата рождения: 20.01.1986</p>
                         </div>
                     </div>
-                    <a class="edit-data">Изменить данные</a>
+                    <a class="edit-data" href="edit-profile.html">Изменить данные</a>
                 </div>
             </div>
             <div class="up-block-container">
