--- a/ferfri.html
+++ b/ferfri.html
@@ -11,5 +11,8 @@
 <a href="pages/authorization.html">authorization</a><br>
 <a href="pages/registration.html">registration</a><br>
 <a href="pages/404.html">404 page</a><br>
+<a href="pages/contacts.html">contacts</a><br>
+<a href="pages/edit-profile.html">edit profile</a><br>
+<a href="pages/edit-profile.html">edit profile</a><br>
 </body>
 </html>
